# ai-stock-advisor

./: .gitignore  App.tsx  README.md  package.json  types.ts
backend/: README.md  main.py  pyproject.toml
backend/app/: models.py  prompts.py  routes.py  services.py
components/: AnalysisDashboard.tsx  Header.tsx  StockInput.tsx
components/icons/: LinkIcon.tsx
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: AnalysisDashboard.tsx  CompetitorAnalysis.tsx  Loader.tsx  MetricCard.tsx  NewsCard.tsx  PortfolioSidebar.tsx  RecommendationCard.tsx  StockChart.tsx  StockInput.tsx
frontend/components/icons/: ArrowDownIcon.tsx  ArrowUpIcon.tsx  ChartBarIcon.tsx  CpuChipIcon.tsx  LinkIcon.tsx  NewspaperIcon.tsx  ScaleIcon.tsx
frontend/src/services/: api.ts
frontend/utils/: technicalAnalysis.ts
services/: geminiService.ts  stockService.ts
