[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "google-genai>=1.52.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
